[package]
edition = "2021"
name = "lapce-go"
version = "0.0.0"
resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]
semver = "1.0"

# default deps for all lapce plugins
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "wasi")'.dependencies.volt]
package = "lapce-plugin"
git = "https://github.com/lapce/lapce-plugin-rust.git"
rev = "1657b855016c6bb50953e74eba4d079bf3173d63"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
